Switch from sun.security.x509 to Bouncy Castle API
* Allows to drop `--add-exports` options.
* Fixes an issue in `_script-util` when `OPENDJ_JAVA_BIN` was not set in
  some cases.